# WKDocker

applet/: CMakeLists.txt  dockerdaemon.cpp
applet/dbus-service/: org.andtru.wkdocker.service.in
kwin_script/WKDocker/contents/code/: main.js
